--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Poppins:wght@400;500;700&family=Roboto:wght@400;500;700&family=Work+Sans:wght@400;500;700&display=swap"
     rel="stylesheet">
   <!-- Google Font -->
-  <title>React App</title>
+  <title>Levi's® Warehouse</title>
 </head>
 
 <body>
